--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-gym==0.10.5
-opencv-python==3.4.0.12
-pygame==1.9.3
-numpy==1.14.2
-twine>=1.11.0
-tqdm>=4.19.5
+gym>=0.10.5
+pygame>=1.9.3
+numpy>=1.14.2
+opencv-python>=3.4.0.12
 setuptools>=39.0.1
+tqdm>=4.19.5
+twine>=1.11.0
