--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 gym>=0.10.5
-pygame>=1.9.3
-pyglet==1.3.2
+matplotlib>=2.0.2
 numpy>=1.14.2
 opencv-python>=3.4.0.12
+pygame>=1.9.3
+pyglet>=1.3.2
 setuptools>=39.0.1
 tqdm>=4.19.5
 twine>=1.11.0
