--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,6 @@ matrix:
     - name: "Python 3.6 on Ubuntu 14.04"
       python: 3.6
       dist: trusty
-    - name: "Python 3.7 on Ubuntu 14.04"
-      python: 3.7
-      dist: trusty
-    - name: "Python 3.8 on Ubuntu 14.04"
-      python: 3.8
-      dist: trusty
     - name: "Python 3.5 on Ubuntu 16.04"
       python: 3.5
       dist: xenial
@@ -26,6 +20,7 @@ matrix:
     - name: "Python 3.8 on Ubuntu 16.04"
       python: 3.8
       dist: xenial
+      before_install: sudo apt-get install libsdl-image1.2-dev libsdl-mixer1.2-dev libsdl-ttf2.0-dev libsdl1.2-dev
     - name: "Python 3.5 on Ubuntu 18.04"
       python: 3.5
       dist: bionic
@@ -38,13 +33,10 @@ matrix:
     - name: "Python 3.8 on Ubuntu 18.04"
       python: 3.8
       dist: bionic
+      before_install: sudo apt-get install libsdl-image1.2-dev libsdl-mixer1.2-dev libsdl-ttf2.0-dev libsdl1.2-dev
     - name: "Python 3.8 on macOS 10.14 (Xcode 10.2)"
       os: osx
       osx_image: xcode10.2
-      language: shell
-    - name: "Python 3.8 on macOS 10.15 (Xcode 11.4)"
-      os: osx
-      osx_image: xcode11.4
       language: shell
 install:
   - pip3 install -r requirements.txt
