--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,4 @@ ENV/
 gym_super_mario_bros/.idea/other.xml
 gym_super_mario_bros/.idea/workspace.xml
 gym_super_mario_bros/.idea/misc.xml
+gym_super_mario_bros/.idea/gym_super_mario_bros.iml
